# big-billy-bass

./: CMakeLists.txt  README.md
b3/: CMakeLists.txt  audioDriver.cpp  audioDriver.h  audioFIle.cpp  audioFile.cpp  audioFile.h  b3.cpp  b3Config.cpp  b3Config.h  biQuadFilter.cpp  biQuadFilter.h  gpio.cpp  gpio.h  gpioStream.cpp  gpioStream.h  logger.cpp  logger.h  runner.h  sighandler.cpp  sighandler.h  sigint.h  signalProcessing.cpp  signalProcessing.h  signalProcessingDefaults.h  state.h  task.cpp  task.h  timeManager.h
config/: b3.ini
server/backend/: app.py  app_config.py  playback_state.py
server/frontend/: index.js
src/: CMakeLists.txt  b3.cpp  logger.cpp  logger.h  runner.h  signalProcessing.cpp  signalProcessing.h  signalProcessingDefaults.h  signalProcessing_main.cpp  state.h  task.cpp  task.h  timeManager.cpp
webServer/: app.py  app_config.py  playback_state.py
webServer/web/static/: index.html
webServer/web/static/css/: index.css
webServer/web/static/js/: index.js
